--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <head>
 
 
-<TITLE>UnabomberManifestoo
+<TITLE>Unabomber Manifesto
 </TITLE>
 </HEAD>
 
-@Kaczynsk
+@Kaczynski
         
 <td valign="middle" align="right" width="275" bgcolor="#28356C">
 		
