--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 @Kaczynski
 	</br></br></br>
-Unabomber Manifesto
+le boom manifesto
 	</br></br></br>
 LA SOCIÉTÉ INDUSTRIELLE ET SON AVENIR
 </br></br></br>
